# mit_6.824_rs

./: Cargo.toml  LICENSE  README.md
common/: Cargo.toml
common/src/: logger.rs
map_reduce_task/: Cargo.toml
map_reduce_task/src/: lib.rs
mr_model/: Cargo.toml
mr_model/src/: lib.rs
mr_sequential/: Cargo.toml
mr_sequential/src/: main.rs
