[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "time"] }
chrono = "0.4.37"
time = { version = "0.3.34", features = ["formatting", "local-offset", "std"] }
