[package]
name = "mr_sequential"
version = "0.1.0"
edition = "2021"

[dependencies]
mr_model = { path = "../mr_model" }
common = { path = "../common" }
libloading = "0.8.3"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.115" }
